--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -36,6 +36,7 @@ include_directories(${PY_ARROW})
 execute_process(COMMAND ${PYTHON_EXECUTABLE} -c "import pyarrow as pa;print(pa.get_library_dirs()[-1])" OUTPUT_VARIABLE PY_ARROW_LIB_PATH)
 string(STRIP ${PY_ARROW_LIB_PATH} PY_ARROW_LIB_PATH)
 link_libraries(${PY_ARROW_LIB_PATH}/libarrow_python.so)
+link_libraries(${PY_ARROW_LIB_PATH}/libarrow.so)
 execute_process(COMMAND ${PYTHON_EXECUTABLE} -c "import numpy as np; print(np.get_include())" OUTPUT_VARIABLE PY_NUMPY)
 if (NOT PY_NUMPY)
   message(FATAL_ERROR "numpy not found.")
