--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -20,6 +20,19 @@ else()
   message(FATAL_ERROR "log4cxx not found.")
 endif()
 
+find_path(H5_HPP_INCLUDE_PATH hdf5/serial/H5Cpp.h)
+find_library(H5_CPP_LIBRARY_PATH hdf5_cpp)
+find_library(H5_LIBRARY_PATH hdf5_serial)
+if(H5_HPP_INCLUDE_PATH AND H5_LIBRARY_PATH)
+  message(STATUS "Found hdf5")
+  include_directories(${H5_HPP_INCLUDE_PATH}/hdf5/serial)
+  link_libraries(${H5_LIBRARY_PATH})
+  link_libraries(${H5_CPP_LIBRARY_PATH})
+else()
+  message(FATAL_ERROR "hdf5 not found.")
+endif()
+
+
 find_package(PythonInterp 3 REQUIRED)
 find_package(PythonLibs 3 REQUIRED)
 include_directories(${PYTHON_INCLUDE_DIRS})
